Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-35308

HPS does not move for non-durable writes

    XMLWordPrintable

Details

    • Triaged
    • No
    • KV-Engine MH 2nd Beta, KV-Engine Mad-Hatter GA

    Description

      See section 5 of https://docs.google.com/document/d/1DCIzCNXmm3XjkylF19zwNvxcwJFp3bLqSIsQZzTakZ0/edit#heading=h.tb33bvp6r75d. Currently this "works" for replica receiving disk snapshot and a replica promoted to active if said non-durable writes are persisted.

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-35308
          # Subject Branch Project Status CR V

          Activity

            People

              ben.huddleston Ben Huddleston
              ben.huddleston Ben Huddleston
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty