MB-35308: Move HPS on non durable writes

To allow ns_server to only check the HPS when deciding which replica
should be promoted, make the HPS move on non-durable writes too. They
would otherwise have to consider both the HPS and the high seqno when
deciding which replica ought to be promoted.

Change-Id: I851f079c07983b9a67ed87d7a8735abe8d4a779a
Reviewed-on: http://review.couchbase.org/116974
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>